# ability_ability_lite

./: 0707test.c  1.txt  22222.xlsx  CMakeLists.txt  Fossscan0916.java  README.md  README_zh.md  aa0902.c  board.md  bundle.json  ci_events-10-prod.xlsx  ci_events-11-prod.xlsx  ci_events-3.xlsx  ci_events-4.xlsx  ci_events-5.xlsx  ci_events-6.xlsx  ci_events-7.xlsx  ci_events-8-prod.xlsx  ci_events-9-prod.xlsx  ci_events.xlsx  ci_events12121.xlsx  ci_events543434345.xlsx  ci_events777.xlsx  test.cpp  test02.cpp  test03.cpp  test04.cpp  test05.cpp  test0702.c  test07061800.c  test0707.c  test0708.c  test0714.c  test0716.c  test0813.c  test0916.c  testtest0913.c  代码门禁列表-问题.xlsx
events/: aaaci_events.xlsx  bbbci_events.xlsx  ci_events111.xlsx  ci_events222.xlsx  ci_events333.xlsx  ci_events888.xlsx  ci_events999.xlsx
frameworks/ability_lite/: BUILD.gn  README.md
frameworks/ability_lite/example/: BUILD.gn  config.json
frameworks/ability_lite/example/entry/src/main/cpp/: main_ability_slice.cpp  root_view_helper.cpp
frameworks/ability_lite/include/: ability_slice_route.h
frameworks/ability_lite/src/: ability.cpp  ability_event_handler.cpp  ability_main.cpp  ability_scheduler.cpp  ability_slice.cpp  ability_slice_route.cpp  ability_slice_scheduler.cpp  ability_slice_stack.cpp  ability_thread.cpp  ability_window.cpp  testadf.c  tests0113
frameworks/ability_lite/unittest/: ability_main_test.cpp
frameworks/abilitymgr_lite/: BUILD.gn
frameworks/abilitymgr_lite/include/: ability_self_callback.h  abilityms_slite_client.h
frameworks/abilitymgr_lite/include/slite/: abilityms_slite_client.h
frameworks/abilitymgr_lite/src/: ability_manager.cpp  ability_self_callback.cpp  ability_service_manager.cpp  abilityms_client.cpp  test0713.cpp
frameworks/abilitymgr_lite/src/slite/: ability_manager.cpp  ability_manager_client.cpp  ability_manager_inner.cpp  abilityms_slite_client.cpp
frameworks/abilitymgr_lite/unittest/: ability_manager_inner_test.cpp
frameworks/want_lite/: BUILD.gn
frameworks/want_lite/include/: want_utils.h
frameworks/want_lite/src/: want.cpp
interfaces/inner_api/abilitymgr_lite/: ability_service_interface.h
interfaces/inner_api/abilitymgr_lite/slite/: ability_manager_client.h
interfaces/innerkits/abilitymgr_lite/: ability_kit_command.h  ability_main.h  ability_service_interface.h
interfaces/innerkits/abilitymgr_lite/slite/: ability_manager_inner.h
interfaces/kits/ability_lite/: ability.h  ability_loader.h  ability_manager.h
interfaces/kits/ability_lite/slite/: slite_ability.h
interfaces/kits/js/declaration/: BUILD.gn
interfaces/kits/js/napi/: BUILD.gn  js_aafwk.cpp
interfaces/kits/want_lite/: want.h
services/abilitymgr_lite/: BUILD.gn
services/abilitymgr_lite/include/: ability_list.h  ability_mgr_feature.h  ability_mgr_slite_feature.h  ability_mission_record.h  ability_record.h  ability_service.h  ability_stack.h  ability_thread.h  ability_thread_loader.h  slite_ability_thread.h
services/abilitymgr_lite/include/slite/: ability_record.h  ability_record_manager.h  ability_thread.h  bms_helper.h
services/abilitymgr_lite/include/util/: abilityms_helper.h  abilityms_log.h  abilityms_status.h
services/abilitymgr_lite/src/: ability_connect_mission.cpp  ability_inner_feature.cpp  ability_list.cpp  ability_mgr_feature.cpp  ability_mgr_handler.cpp  ability_mgr_service.cpp  ability_mgr_slite_feature.cpp  ability_mission_record.cpp  ability_mission_stack.cpp  ability_record.cpp  ability_service.cpp  ability_stack.cpp  ability_stack_manager.cpp  ability_thread_loader.cpp  ability_worker.cpp  app_manager.cpp  js_app_host.cpp  page_ability_record.cpp
services/abilitymgr_lite/src/client/: ability_dump_client.cpp  ability_thread_client.cpp  app_spawn_client.cpp  bundlems_client.cpp  wms_client.cpp
services/abilitymgr_lite/src/slite/: ability_mgr_service_slite.cpp  ability_record_manager.cpp  bms_helper.cpp  js_ability_thread.cpp  native_ability_thread.cpp
services/abilitymgr_lite/src/task/: ability_activate_task.cpp  ability_attach_task.cpp  ability_background_task.cpp  ability_connect_done_task.cpp  ability_connect_task.cpp  ability_disconnect_done_task.cpp  ability_disconnect_task.cpp  ability_dump_task.cpp  ability_inactivate_task.cpp  ability_start_task.cpp  ability_stop_task.cpp  ability_terminate_service_task.cpp  ability_terminate_task.cpp  app_restart_task.cpp  app_terminate_task.cpp
services/abilitymgr_lite/src/util/: abilityms_helper.cpp
services/abilitymgr_lite/tools/: BUILD.gn
services/abilitymgr_lite/tools/src/: ability_tool.cpp  main.cpp
services/abilitymgr_lite/unittest/: BUILD.gn
services/abilitymgr_lite/unittest/test_lv0/page_ability_test/: BUILD.gn  page_ability_test.cpp
services/abilitymgr_lite/unittest/utils/: ability_test_helper.cpp  ability_test_helper.h
test/slite/: CMakeLists.txt
test/slite/dep/include/: feature.h  pms_types.h
test/slite/mock/include/: aafwk_event_error_code.h  adapter.h  bundle_manager.h  cmsis_os.h  cmsis_os2.h  js_ability.h  js_async_work.h  log.h  los_task.h  los_typedef.h  message_queue_utils.h  ohos_init.h  samgr_lite.h  slite_ace_ability.h  target_config.h
test/slite/mock/src/: bundle_manager.cpp  cmsis_os2.cpp  js_ability.cpp  js_async_work.cpp  los_task.cpp  message.cpp  ohos_init.cpp  samgr_lite.cpp  slite_ace_ability.cpp
test/slite/services/abilitymgr_lite/: CMakeLists.txt  ability_list_test.cpp  ability_record_manager_test.archimedes.cpp  ability_record_manager_test.cpp  ability_record_test.cpp  ability_thread_loader_test.cpp  ability_thread_test.cpp  abilityms_slite_client_test.archimedes.cpp  abilityms_slite_client_test.cpp  bms_helper_test.cpp  js_ability_thread_test.cpp  native_ability_thread_test.cpp  slite_ability_loader_test.cpp
